--- a/src/styles.css
+++ b/src/styles.css
@@ -46,10 +46,10 @@ margin-top: 0;
   top: 0px;
   right: 0;
   left: 0;
-  overflow-y: hidden;
+
 }
 body{ padding-top: var(--header-h); }
-.site-header{display:flex;align-items:center;gap:16px;height:var(--header-h)}
+.site-header{display:flex;align-items:center;gap:16px;height:var(--header-h);overflow-y: hidden;}
 .logo{font-weight: 800;
 text-decoration: none;
 color: var(--text);
